distribution/mlflow/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: mlflow
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
